--- a/HTML/ejercicio1.html
+++ b/HTML/ejercicio1.html
@@ -5,8 +5,8 @@
     <style></style>
   </head>
   <body>Hola mundo!<br/>
-  <img src="mundo.jpg"/><br/>
+ <img src="mundo.jpg"width="500" height="341"><br/> 
   En el desarrollo de esta practica no ha muerto ningun gatito<br/> 
-  <img src="jimmy.jpg"/><br/>
+  <img src="gato.jpg"width="500" height="341"><br/> 
   </body>
 </html>
