--- a/HTML/ejercicio5.html
+++ b/HTML/ejercicio5.html
@@ -20,6 +20,9 @@
         <dd>National Basketball Asosiation</dd> 
         <dd>30 equipos</dd> 
         <dd>Futuro Ganador: (LAL)</dd> 
-     <dt></dt>
+     <dt>Coche</dt>
+        <dd>Vehiculo de 4 ruedas</dd> 
+        <dd>Para conducir por tierra</dd> 
+        <dd>No se dice <s>carro</s></dd>
     </body>
 </html>
