--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <a href="HTML/ejercicio3.html">Ejercicio 3</a><br/>
         <a href="HTML/ejercicio4.html">Ejercicio 4</a><br/>
         <a href="HTML/ejercicio5.html">Ejercicio 5</a><br/>
+        <a href="HTML/ejercicio6.html">Ejercicio 6</a><br/>
   </body>
 </html>
