--- a/index.html
+++ b/index.html
@@ -11,5 +11,12 @@
         <a href="HTML/ejercicio4.html">Ejercicio 4</a><br/>
         <a href="HTML/ejercicio5.html">Ejercicio 5</a><br/>
         <a href="HTML/ejercicio6.html">Ejercicio 6</a><br/>
+        <a href="HTML/ejercicio7.html">Ejercicio 7</a><br/>
+        <a href="HTML/ejercicio8.html">Ejercicio 8</a><br/>
+        <a href="HTML/ejercicio9.html">Ejercicio 9</a><br/>
+        <a href="HTML/ejercicio10.html">Ejercicio 10</a><br/>
+        <a href="HTML/ejercicio11.html">Ejercicio 11</a><br/>
+        <a href="HTML/ejercicio12.html">Ejercicio 12</a><br/>
+
   </body>
 </html>
