--- a/HTML/ejercicio13.html
+++ b/HTML/ejercicio13.html
@@ -1,31 +1,31 @@
 <html>
-<head>
-    <style>table, th, td {border: 1px solid black;}</style>
-    <title>Ejercicio Tabla 7</title>
-</head>
-    <body>
-        <table>
-        <tr>
-            <td></td>
-            <td rowspan="2"></td>
-            <th colspan="2">Media</th>
-        </tr>
-        <tr>
-            <td></td>
-            <th>Altura</th>
-            <th>Peso</th>
-        </tr>
-        <tr>
-            <th rowspan="2">Sexo</th>
-            <th>Hombres</th>
-            <td>1.9</td>
-            <td>85</td>
-        </tr>
-        <tr>
-            <th>Mujeres</th>
-            <td>1.7</td>
-            <td>60</td>
-        </tr>
-        </table>
-    </body>
+    <head>
+      <title>Ejercicio tabla 7</title>
+     <style>table, th, td {border: 1px solid black;}</style>
+    </head>
+        <body>
+         <table>
+            <tr>
+                <td>1</td>
+                <td>2</td>
+                <td>3
+                <table border>
+            <tr>
+                <td>A</td>
+                <td>B</td>
+            </tr>
+            <tr>
+                <td>C</td>
+                <td>D</td>
+            </tr>
+            </table>
+            </td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>5</td>
+                <td>6</td>
+            </tr>
+         </table>    
+        </body>
 </html>
