--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a href="HTML/ejercicio10.html">Ejercicio 10</a><br/>
         <a href="HTML/ejercicio11.html">Ejercicio 11</a><br/>
         <a href="HTML/ejercicio12.html">Ejercicio 12</a><br/>
+        <a href="HTML/ejercicio13.html">Ejercicio 13</a><br/>
 
   </body>
 </html>
