--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <a href="HTML/ejercicio11.html">Ejercicio 11</a><br/>
         <a href="HTML/ejercicio12.html">Ejercicio 12</a><br/>
         <a href="HTML/ejercicio13.html">Ejercicio 13</a><br/>
+        <a href="HTML/ejercicio14.html">Ejercicio 14</a><br/> 
+        <a href="HTML/ejercicio15.html">Ejercicio 15</a><br/>
+        <a href="HTML/ejercicio17.html">Ejercicio 17</a><br/>
+        <a href="Mi pagina web/index.html">Mi pagina web</a><br/>
 
   </body>
 </html>
