--- a/Mi pagina web/index.html
+++ b/Mi pagina web/index.html
@@ -19,7 +19,7 @@
             <li><a href="index.html">Inicio</a></li>
             <li><a href="news.asp">Mis aficiones</a></li>
             <li><a href="contact.asp">Contactos</a></li>
-            <li><a href="about.asp">NBA 2K</a></li>
+            <li><a href="Cancion.html">Canción</a></li>
             <li><a href="curriculum.html">CV</a></li>
             </ul>
         </div>
