--- a/Mi pagina web/index.html
+++ b/Mi pagina web/index.html
@@ -18,7 +18,7 @@
             <ul class="cabecera-negra">
             <li><a href="index.html">Inicio</a></li>
             <li><a href="news.asp">Mis aficiones</a></li>
-            <li><a href="contact.asp">Contactos</a></li>
+            <li><a href="NBA2k.html">NBA 2K</a></li>
             <li><a href="Cancion.html">Canción</a></li>
             <li><a href="curriculum.html">CV</a></li>
             </ul>
