--- a/Mi pagina web/NBA2k.html
+++ b/Mi pagina web/NBA2k.html
@@ -33,6 +33,7 @@
             <h3><span>1</span>Mi carrera (Mycarreer)</h3>
             <p>El modo mi carrera consiste en crearse un jugador personalizado segun tu estilo de juego. Para esto estan los "quesitos". Los quesitos vienen a ser el % de habilidades. Por ejemplo tenemos el queso rojo, el verde, el amarillo y el azul. Cada uno de estos se especializa en una cosa. Si eliges una mezcla de queso rojo con azul vas a hacer que tu jugador pueda defender mejor y pueda hacer mas mates que uno que no tenga esos quesos. Lo mismo que si escojes el queso verde y amarillo, vas a hacer que tu jugador tire y que pueda driblar mejor que uno que no tenga estos quesos.</p>
             <p>Una vez creado el personaje a tu gusto tendras la opcion de entrar en el parque que viene ser un mundo abierto como por ejemplo en el gta en el que puedes jugar online con amigos para jugar en canchas contra otras personas.</p>
+            <p>Tambien hay niveles empezando desde rookie (novato) hasta leyenda. Podras observar los iconos en la foto de la introduccion.</p>
             <h3><span>2</span>Mi equipo (My team)</h3>
             <p>Para la gente de fifa viene a ser el ultimate team y fut champions.</p>
             <p>Consiste basicamente en farmear monedas para crearte tu propia plantilla con jugadores historicos+actuales y poder jugar contra gente online.  </p>
@@ -50,8 +51,6 @@
               <iframe width="560" height="315" src="https://www.youtube.com/embed/GREQO1l0hmA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               <img src="2k.jpg" alt="">
                 <div class="hover-galeria">
-                  <img src="icono1.png" alt="">
-                  <p>Nuestro trabajo</p>
                 </div>
             </div>
 
