--- a/Mi pagina web/Cancion.html
+++ b/Mi pagina web/Cancion.html
@@ -18,7 +18,7 @@
         <div id="menu">
             <ul class="cabecera-negra">
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="news.asp">Mis aficiones</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
             <li><a href="NBA2k.html">NBA 2K</a></li>
             <li><a href="Cancion.html">Canción</a></li>
             <li><a href="curriculum.html">CV</a></li>
